Show/illustrate "lazy trace".